9 June 2009: Wouter
	- openssl key files are opened apache-style, when user is root and
	  before chrooting.  This makes permissions on remote-control key 
	  files easier to set up.  Fixes bug #251.
	- flush_type and flush_name remove msg cache entries.
	- codereview - dp copy bogus setting fix.

8 June 2009: Wouter
	- Removed RFC5011 REVOKE flag support. Partial 5011 support may cause
	  inadvertant behaviour.
	- 1.3.0 tarball for release created.
	- 1.3.1 development in svn trunk.
	- iana portlist updated.
	- fix lint from complaining on ldns/sha.h.
	- help compiler figure out aliasing in priv_rrset_bad() routine.
	- fail to configure with python if swig is not found.
	- unbound_munin_ in contrib uses ps to show rss if sbrk does not work.

3 June 2009: Wouter
	- fixup bad free() when wrongly encoded DSA signature is seen.
	  Reported by Paul Wouters.
	- review comments from Matthijs.

2 June 2009: Wouter
	- --enable-sha2 option. The draft rsasha256 changed its algorithm
	  numbers too often.  Therefore it is more prudent to disable the
	  RSASHA256 and RSASHA512 support by default.
	- ldns trunk included as new tarball.
	- recreated the 1.3.0 tag in svn. rc1 tarball generated at this point.

29 May 2009: Wouter
	- fixup doc bug in README reported by Matthew Dempsky.

28 May 2009: Wouter
	- update iana port list
	- update ldns lib tarball

27 May 2009: Wouter
	- detect lack of IPv6 support on XP (with a different error code).
	- Fixup a crash-on-exit which was triggered by a very long queue.
	  Unbound would try to re-use ports that came free, but this is
	  of course not really possible because everything is deleted.
	  Most easily triggered on XP (not Vista), maybe because of the
	  network stack encouraging large messages backlogs.
	- change in debug statements.
	- Fixed bug that could cause a crash if root prime failed when there
	  were message backlogs.

26 May 2009: Wouter
	- Thanks again to Brett Carr, found an assertion that was not true.